[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://fonts/monogram.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 72
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 3 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
pause_mode = 2
margin_right = 640.0
margin_bottom = 360.0
color = Color( 1, 1, 1, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 80.0
margin_right = 406.0
margin_bottom = 143.0
custom_fonts/font = SubResource( 1 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 136.0
margin_right = 433.0
margin_bottom = 199.0
custom_fonts/font = SubResource( 3 )
text = "Restart"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 200.0
margin_right = 406.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 2 )
text = "Quit  "
flat = true
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
